Classified the parsed lines to WORD,DEF & EXMAPLES

--- a/roughwork.ipynb
+++ b/roughwork.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -206,26 +206,6 @@
       "00013461 00 s 01 objective 0 001 & 00013179 a 0000 | belonging to immediate experience of actual things or events; \"objective benefits\"; \"an objective example\"; \"there is no objective evidence of anything of the kind\"  \n",
       "\n",
       "00013681 00 s 02 real 0 tangible 0 003 & 00013179 a 0000 + 04767279 n 0202 + 13979383 n 0101 | capable of being treated as fact; \"tangible evidence\"; \"his brief time as Prime Minister brought few real benefits to the poor\"  \n",
-      "\n",
-      "00013906 00 a 01 abundant 0 021 ^ 00106545 a 0000 ^ 02029118 a 0000 = 05116040 n 0000 + 02721154 v 0101 + 05122340 n 0101 ! 00016794 a 0101 & 00014377 a 0000 & 00014509 a 0000 & 00014877 a 0000 & 00015134 a 0000 & 00015284 a 0000 & 00015517 a 0000 & 00015626 a 0000 & 00015758 a 0000 & 00015892 a 0000 & 00016043 a 0000 & 00016173 a 0000 & 00016285 a 0000 & 00016388 a 0000 & 00016570 a 0000 & 00016685 a 0000 | present in great quantity; \"an abundant supply of water\"  \n",
-      "\n",
-      "00014377 00 s 02 abounding 0 galore(ip) 0 001 & 00013906 a 0000 | existing in abundance; \"abounding confidence\"; \"whiskey galore\"  \n",
-      "\n",
-      "00014509 00 s 05 ample 0 copious 1 plenteous 0 plentiful 1 rich 0 008 & 00013906 a 0000 + 05123104 n 0503 + 05122868 n 0402 + 13796604 n 0312 + 05122868 n 0301 + 05122868 n 0303 + 05122340 n 0202 + 05120210 n 0101 | affording an abundant supply; \"had ample food for the party\"; \"copious provisions\"; \"food is plentiful\"; \"a plenteous grape harvest\"; \"a rich supply\"  \n",
-      "\n",
-      "00014877 00 s 02 copious 2 voluminous 0 005 & 00013906 a 0000 + 05113324 n 0203 + 05113324 n 0202 + 05122340 n 0102 + 00520033 r 0201 | large in number or quantity (especially of discourse); \"she took copious notes\"; \"a subject of voluminous legislation\"  \n",
-      "\n",
-      "00015134 00 s 01 easy 0 002 & 00013906 a 0000 ;c 06158935 n 0000 | obtained with little effort or sacrifice, often obtained illegally; \"easy money\"  \n",
-      "\n",
-      "00015284 00 s 05 exuberant 0 lush 0 luxuriant 0 profuse 0 riotous 0 005 & 00013906 a 0000 + 05123104 n 0402 + 00311594 v 0301 + 05123543 n 0301 + 05123543 n 0202 | produced or growing in extreme abundance; \"their riotous blooming\"  \n",
-      "\n",
-      "00015517 00 s 01 thick 0 001 & 00013906 a 0000 | abounding; having a lot of; \"the top was thick with dust\"  \n",
-      "\n",
-      "00015626 00 s 01 long 0 001 & 00013906 a 0000 | having or being more than normal or necessary; \"long on brains\"; \"in long supply\"  \n",
-      "\n",
-      "00015758 00 s 03 overabundant 0 plethoric 0 rife 0 003 & 00013906 a 0000 + 05127416 n 0202 + 05126667 n 0101 | excessively abundant  \n",
-      "\n",
-      "00015892 00 s 01 plentiful 2 002 & 00013906 a 0000 + 05122868 n 0102 | existing in great number or quantity; \"rhinoceroses were once plentiful here\"  \n",
       "\n"
      ]
     }
@@ -235,9 +215,89 @@
     "\n",
     "with open ('/Users/surisettivamsikrishna/Downloads/Vamsi Pc/CODES/Mark2/SARAS/Saras_-Smart-Define/DataBase/dict/data.adj','r') as file:\n",
     "    for index, line in enumerate(file):\n",
-    "        if index == 100:\n",
+    "        if index >= 90 and index <= 300:\n",
     "            break\n",
     "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word: 00520033 02 r 01 voluminously 0 004 + 00014877 a 0102 + 01393834 a 0101 \\ 00014877 a 0102 \\ 01393834 a 0101, Definition: in a voluminous manner, Example: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "    with open('/Users/surisettivamsikrishna/Downloads/Vamsi Pc/CODES/Mark2/SARAS/Saras_-Smart-Define/DataBase/dict/data.adv', 'r') as file:\n",
+    "        for line in file:\n",
+    "            \n",
+    "            parts = line.split(\"Definition:\")\n",
+    "            if len(parts) < 2:\n",
+    "                continue  # Skip lines without a definition\n",
+    "            word_info = parts[0].strip()\n",
+    "            definition = parts[1].strip()\n",
+    "            example = parts[2].strip() if len(parts) > 2 else None\n",
+    "            if example:\n",
+    "                examples = example.split(\",\")  # Split examples by commas\n",
+    "                examples = [ex.strip() for ex in examples]  # Clean up spaces around examples\n",
+    "            else:\n",
+    "                examples = None\n",
+    "            # Example of how to use the extracted information\n",
+    "print(f\"Word: {word_info}, Definition: {definition}, Example: {example}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word: 00520033 02 r 01 voluminously 0 004 + 00014877 a 0102 + 01393834 a 0101 \\ 00014877 a 0102 \\ 01393834 a 0101, Definition: in a voluminous manner, Example: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "    with open('/Users/surisettivamsikrishna/Downloads/Vamsi Pc/CODES/Mark2/SARAS/Saras_-Smart-Define/DataBase/dict/data.noun', 'r') as file:\n",
+    "        for line in file:\n",
+    "            # Skip lines starting with a space\n",
+    "            if line.startswith(\" \"):\n",
+    "                continue\n",
+    "            \n",
+    "            # Split the line into components\n",
+    "            parts = line.split(\"Definition:\")\n",
+    "            if len(parts) < 2:\n",
+    "                continue  # Skip lines without a definition\n",
+    "            \n",
+    "            # Extract the word (this assumes the word is after the first space and before 'Definition:')\n",
+    "            word_info = parts[0].split()[1:]  # Extract only the actual word part, skipping identifiers\n",
+    "            word_info = ' '.join(word_info)  # Join parts to form the word\n",
+    "            \n",
+    "            # Extract the definition, cleaning it up\n",
+    "            definition = parts[1].split(\"Example:\")[0].strip()\n",
+    "\n",
+    "            # Extract examples if present\n",
+    "            example_part = parts[1].split(\"Example:\")[1].strip() if \"Example:\" in parts[1] else None\n",
+    "            \n",
+    "            # If examples are present, clean and separate them\n",
+    "            if example_part:\n",
+    "                examples = example_part.split(\",\")  # Split examples by commas\n",
+    "                examples = [ex.strip() for ex in examples]  # Clean up spaces around examples\n",
+    "            else:\n",
+    "                examples = None\n",
+    "            \n",
+    "            # Example of how to use the extracted information\n",
+    "print(f\"Word: {word_info}, Definition: {definition}, Example: {examples}\")\n",
+    "            \n"
    ]
   },
   {
