--- a/DataBase/Database1.ipynb
+++ b/DataBase/Database1.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re \n",
-    "import pandas\n",
-    "import sqlite3"
+    "import sqlite3\n",
+    "import re\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -18242,174 +18241,6 @@
     "    for line in file:\n",
     "        line = line.strip()\n",
     "        print(line)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Hello', 'world']\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = \"Hello world\"\n",
-    "print(a.split())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Python', 'is', 'awesome']\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_string = \"Python-is-awesome\"\n",
-    "print(test_string.split('-'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Car:  # This is the blueprint (class)\n",
-    "    def __init__(self, model, color):  # The constructor to define attributes\n",
-    "        self.model = model  # Attribute\n",
-    "        self.color = color  # Attribute\n",
-    "    \n",
-    "    def drive(self):  # Method\n",
-    "        print(\"The car is driving.\")\n",
-    "\n",
-    "# Creating an object (an actual car) from the Car class:\n",
-    "my_car = Car(\"Tesla\", \"Red\")  # 'my_car' is the object"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The car is driving.\n"
-     ]
-    }
-   ],
-   "source": [
-    "my_car.drive()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Dog:  # Class: Blueprint for dogs\n",
-    "    def __init__(self, name, breed):\n",
-    "        self.name = name  # Attribute: Dog's name\n",
-    "        self.breed = breed  # Attribute: Dog's breed\n",
-    "    \n",
-    "    def bark(self):  # Method: Dog's behavior (action)\n",
-    "        print(f\"{self.name} is barking!\")\n",
-    "\n",
-    "# Object: Creating a dog named Rex\n",
-    "rex = Dog(\"Rex\", \"Labrador\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Rex'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rex.name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "03167317 44 a 01 unsaponified 0 002 ! 03167204 a 0101 < 00539651 v 0101 | not converted into soap; \"unsaponified fat\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open('/Users/surisettivamsikrishna/Downloads/Vamsi Pc/CODES/Mark2/SARAS/Saras_-Smart-Define/DataBase/dict/data.adj','r') as file:\n",
-    "    for line in file:\n",
-    "        line = line.strip()\n",
-    "    print(line)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'03167317 44 a 01 unsaponified 0 002 ! 03167204 a 0101 < 00539651 v 0101 | not converted into soap; \"unsaponified fat\"'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "line"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['saponified oils']\n"
-     ]
-    }
-   ],
-   "source": [
-    "import re\n",
-    "match = re.findall(r'\"(.*?)\"',line)\n",
-    "print(match)"
    ]
   },
   {
