--- a/DataBase/Database_for_adj.ipynb
+++ b/DataBase/Database_for_adj.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -6699,10 +6708,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#creating one database, defining a FUNCTION\n",
+    "\n",
+    "def create_database():\n",
+    "    connect = sqlite3.connect('Dictionary.db')\n",
+    "    cursor = connect.cursor()\n",
+    "\n",
+    "    cursor.execute('''\n",
+    "            CREATE TABLE IF NOT EXISTS dictionary(\n",
+    "                   word1 TEXT,\n",
+    "                   synonm TEXT,\n",
+    "                   definition TEXT,\n",
+    "                   examples TEXT)\n",
+    "''')\n",
+    "    \n",
+    "    connect.commit()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_database()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_data(parsed_data):\n",
+    "\n",
+    "    connect= sqlite3.connect('Dictionary.db')\n",
+    "    cursor = connect.cursor()\n",
+    "\n",
+    "    for entry in parsed_data:\n",
+    "        word1=entry['word1']\n",
+    "        synonm=','.join(entry['synonm'])\n",
+    "        defintion = entry['definition']\n",
+    "        examples = ','.join(entry['examples'])\n",
+    "\n",
+    "        cursor.execute('''\n",
+    "        INSERT INTO dictionary (word1, synonm, definition, examples)  \n",
+    "        VALUES(?,?,?,?)\n",
+    "        ''',(word1,synonm,defintion,examples))\n",
+    "\n",
+    "    connect.commit()\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "insert_data(parsed_files_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Application' from 'pywinauto' (/Users/surisettivamsikrishna/Downloads/Vamsi Pc/CODES/Mark2/SARAS/Saras_-Smart-Define/.venv/lib/python3.13/site-packages/pywinauto/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[42], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpynput\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m mouse \n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpywinauto\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Application \n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmain\u001b[39;00m \n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Application' from 'pywinauto' (/Users/surisettivamsikrishna/Downloads/Vamsi Pc/CODES/Mark2/SARAS/Saras_-Smart-Define/.venv/lib/python3.13/site-packages/pywinauto/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from pynput import mouse \n",
+    "from pywinauto import Application \n",
+    "import time\n",
+    "import main \n",
+    "\n",
+    "DOUBLE_TAP_TIME = 0.2\n",
+    "\n",
+    "class DoubleTapListner:\n",
+    "    def __init__(self):\n",
+    "        self.last_click_time = 0\n",
+    "        self.listener = mouse.Listener(on_click=self.on_click)\n",
+    "\n",
+    "    def on_click(self,x,y,button,pressed):\n",
+    "        if pressed:\n",
+    "            current_time = time.time()\n",
+    "            if current_time - self.last_click_time < DOUBLE_TAP_TIME:\n",
+    "                self.on_double_tap()\n",
+    "            self.last_click_time=current_time\n",
+    "\n",
+    "    def on_double_tap(self):\n",
+    "        selected_text = self.get_selected_text()\n",
+    "        if selected_text:\n",
+    "            main.handle_word_trigger(selected_text)\n",
+    "\n",
+    "\n",
+    "    def get_selected_text(self):\n",
+    "        try:\n",
+    "            app = Application().connect(title_re=\".*\")\n",
+    "            dlg=app.top_window()\n",
+    "            selected_text=dlg.Selection().window_text()\n",
+    "            return selected_text.strip()\n",
+    "        except Exception as e:\n",
+    "            print(\"Error Extracting select text:\",e)\n",
+    "            return None\n",
+    "        \n",
+    "    def start(self):\n",
+    "        with self.listener:\n",
+    "            self.listener.join()\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    listener = DoubleTapListner()\n",
+    "    listener.start()\n",
+    "\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
