--- a/GUI/Testings_GUI/test.ipynb
+++ b/GUI/Testings_GUI/test.ipynb
@@ -335,6 +335,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "from PyQt6.QtGui import QFontDatabase\n",
+    "from PyQt6.QtWidgets import QApplication\n",
+    "import sys\n",
+    "\n",
+    "app = QApplication(sys.argv)\n",
+    "\n",
+    "fonts= QFontDatabase.families()\n",
+    "\n",
+    "for font in fonts:\n",
+    "    print(font)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
