Finalised a GUI, need to polish that

--- a/GUI/Testings_GUI/test.ipynb
+++ b/GUI/Testings_GUI/test.ipynb
@@ -2,35 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Unknown property border_radius\n",
-      "Unknown property border_radius\n",
-      "Unknown property border_radius\n",
-      "2025-02-10 10:39:02.065 Python[89674:10170094] +[IMKClient subclass]: chose IMKClient_Modern\n",
-      "2025-02-10 10:39:02.065 Python[89674:10170094] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
+     "ename": "",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/surisettivamsikrishna/Downloads/Vamsi Pc/CODES/Mark2/SARAS/Saras_-Smart-Define/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -367,6 +350,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unknown property border_radius\n",
+      "Unknown property border_radius\n",
+      "Unknown property border_radius\n",
+      "2025-02-12 10:15:50.952 Python[72232:11257094] +[IMKClient subclass]: chose IMKClient_Modern\n",
+      "2025-02-12 10:15:50.952 Python[72232:11257094] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/surisettivamsikrishna/Downloads/Vamsi Pc/CODES/Mark2/SARAS/Saras_-Smart-Define/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from PyQt6.QtWidgets import QApplication, QLabel, QMainWindow\n",
+    "from PyQt6.QtCore import Qt \n",
+    "\n",
+    "class MainWindow(QMainWindow):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        #setting a dark theme example \n",
+    "        self.setWindowTitle(\"Testing Dark Theme\")\n",
+    "        self.resize(400,300)\n",
+    "\n",
+    "        #Createing a Label\n",
+    "        label = QLabel(\"This is a Dark Theme\")\n",
+    "        label.setAlignment(Qt.AlignmentFlag.AlignCenter)\n",
+    "\n",
+    "        #Applying a dark theme \n",
+    "        self.setStyleSheet(\"\"\"\n",
+    "        QMainWindow {\n",
+    "            background-color:rgb(33, 32, 32);\n",
+    "            color: #ffffff;\n",
+    "            border: 2px solidrgb(119, 28, 28);\n",
+    "            border_radius: 30px;\n",
+    "        }\n",
+    "        QLabel {\n",
+    "                font-family: 'Arial';\n",
+    "                font-size: 20px;          /* Larger text */\n",
+    "                font-weight: bold;        /* Bold text */\n",
+    "                color:rgb(210, 229, 244);           /* Gold text color */\n",
+    "                }\n",
+    "        QLabel::slection{\n",
+    "                background-color: #ffeb3b;\n",
+    "                color: black;\n",
+    "                \n",
+    "        }\n",
+    "\n",
+    "\"\"\")\n",
+    "        \n",
+    "        self.setCentralWidget(label)\n",
+    "\n",
+    "app = QApplication(sys.argv)\n",
+    "window = MainWindow()\n",
+    "window.show()\n",
+    "app.exec()\n",
+    "sys.exit()"
+   ]
   },
   {
    "cell_type": "code",
